--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "docpad-plugin-partials": "~2.8.1",
     "docpad-plugin-marked": "~2.1.2",
     "docpad-plugin-eco": "~2.0.2",
-    "docpad-plugin-slim": "~2.0.0"
+    "docpad-plugin-slim": "~2.0.0",
+    "docpad-plugin-sass": "~2.6.1"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
